tests/ui/errors/snapshots/infer_enum_variant_not_found_in_pattern_close_match.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[main.lis:7:5]
 6 │   match s {
 7 │     Circl(r) => {}
   ·     ────┬───
   ·         ╰── no variant `Circl` on `shapes.Shape`
 8 │   }
   ╰────
  help: Did you mean `Circle`? · code: [resolve.variant_not_found]
