tests/ui/errors/snapshots/infer_enum_variant_not_found_outside_match_suggests_qualified_only.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:5:7]
 4 │ fn test(c: Color) -> int {
 5 │   let Color.Gren = c else { return 0 }
   ·       ─────┬────
   ·            ╰── no variant `Gren` on `Color`
 6 │   1
   ╰────
  help: Did you mean `Color.Green`? · code: [resolve.variant_not_found]
