tests/ui/errors/snapshots/infer_enum_variant_typo_through_alias_suggests_variants.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
    ╭─[test.lis:9:5]
  8 │     Green => 2,
  9 │     Bluu => 3,
    ·     ──┬─
    ·       ╰── no variant `Bluu` on `Palette`
 10 │   }
    ╰────
  help: Did you mean `Blue`? · code: [resolve.variant_not_found]
