tests/ui/errors/snapshots/infer_enum_variant_typo_through_cross_module_alias_suggests_reachable_qualifier.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[main.lis:5:7]
 4 │ fn handle(e: api.UIEvent) -> int {
 5 │   let api.UIEvent.Hovr = e else { return 0 }
   ·       ────────┬───────
   ·               ╰── not found
 6 │   1
   ╰────
  help: Did you mean `api.UIEvent.Hover`? · code: [resolve.variant_not_found]
