tests/ui/errors/snapshots/infer_equality_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let x = 42 == "hello";
   ·           ──────┬──────
   ·                 ╰── cannot compare `int` and `string`
 4 │ }
   ╰────
  help: The `==` operator requires both operands to have the same type · code: [infer.type_mismatch]
