tests/ui/errors/snapshots/infer_equals_container_fails_interface_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:12:16]
 11 │   let x = [1, 2]
 12 │   let _ = same(x, x)
    ·                ┬
    ·                ╰── `Slice` does not implement `Equatable`
 13 │ }
    ╰────
  help: Missing methods:
          From `Equatable`
            - equals: fn (T) -> bool
        code: [infer.interface_not_implemented]
