tests/ui/errors/snapshots/infer_equals_rejects_function_element.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:3:16]
 2 │ fn test(a: Slice<fn() -> int>, b: Slice<fn() -> int>) {
 3 │   let result = a.equals(b);
   ·                ┬
   ·                ╰── cannot be compared
 4 │ }
   ╰────
  help: `Slice<fn () -> int>` cannot be compared because functions cannot be compared · code: [infer.not_equatable]
