tests/ui/errors/snapshots/infer_equals_rejects_map_function_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:3:16]
 2 │ fn test(a: Map<string, fn() -> int>, b: Map<string, fn() -> int>) {
 3 │   let result = a.equals(b);
   ·                ┬
   ·                ╰── cannot be compared
 4 │ }
   ╰────
  help: `Map<string, fn () -> int>` cannot be compared because functions cannot be compared · code: [infer.not_equatable]
